--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Aryan Kumar</h1>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat aspernatur omnis quo corrupti voluptate quaerat laboriosam perferendis saepe voluptas rem!
 </body>
 </html>
